2003-12-29  Alexander Dupuy  <dupuy@sysdetect.com>

	* src/bttcp.c (relay_finish): new gcc allows inline declaration of
	newfd variable, a la C++, but old gcc [or ANSI C] does not

2003-12-29  Seth Robertson  <seth@buscemi.sysdetect.com>

	* lib/b_relay.c (bk_relay_iohhandler): Allow user callback to
	modify outgoing buffer, not discarding buffer.
	(bk_relay_iohhandler): Carpe Data -- seize the data instead of
	copying it when possible.

	* src/bttcp.c (relay_finish): Implement transmit limits.
	(main): Allow major numeric arguments to use kKmM etc notation.

	* lib/b_strconv.c (bk_string_demagnify): Go in other direction
	(from 1.5k -> 1530)

2003-12-28  Seth Robertson  <seth@buscemi.sysdetect.com>

	* src/bttcp.c: Raise default bttcp ioh buffer size.  Implement
	keepalives, --file-in/out/io instead of stdio.

2003-12-25  Seth Robertson  <seth@now.baka.org>

	* lib/b_strconv.c (bk_string_magnitude): Write a cute little
	routine to print a number in a magnitude-sense.  E.g. 1534 -> 1.5k
	Works in powers of 2 and 10, variable precision, and with a range of
	(-10^27+1 to 10^27-1) or (-2^90+1 to 2^90-1)

	* include/libbk.h (struct bk_relay_ioh_stats): Create statistics
	for bk_relay accounting.

	* lib/b_relay.c (bk_relay_iohhandler): Implement aforementioned
	statistics.

	* src/Makefile (LOCAL_LDS): Specify LOCAL_LDS so we know where to
	find bkssl and bkxml libraries.

	* src/bttcp.c (relay_finish): Report transfer stats in verbose mode.
	(connect_complete): Add socket buffer size/TCP nodelay options and support.
	(main): Discriminate between --local-name and --length '-l' short args.

2003-12-10  James Tanis  <jtt@pearl.sysdetect.com>

	* include/libbkxml.h (BKXML_CHECK_NEXT_NODE_NAME_CHECK_THIS_NODE):
	Resist the name police. Strike a blow for personal BAKA.

	* xml/b_search.c (bkxml_check_next_node_name): Avoid core dump from
	recent fix. [How can *nodep be uninitialized if we've already checked