@@ -1,5 +1,5 @@
 /*
- * $Id: libbk.h,v 1.271 2003/12/29 19:53:38 seth Exp $
+ * $Id: libbk.h,v 1.272 2003/12/30 05:27:20 seth Exp $
  *
  * ++Copyright LIBBK++
  *
@@ -1947,6 +1947,7 @@ extern const char *bk_nvmap_value2name(bk_s B, struct bk_name_value_map *nvmap, 
 #define BK_EXEC_FLAG_USE_SUPPLIED_FDS		0x8 ///< Use the fd's supplied as copyu in args
 #define BK_EXEC_FLAG_CLOSE_CHILD_DESC		0x10 ///< Close all extraneous deciptors in child
 #define BK_EXEC_FLAG_STDERR_ON_STDOUT		0x20 ///< When creating pipe to child, stderr dups on stdout
+#define BK_EXEC_FLAG_USE_PTY			0x40 ///< Use PTY instead of pipe
 
 #ifdef MISSING_PTHREAD_RWLOCK_INIT
 /* lock initialization only required on platforms where rwlock_t is not a pointer (Darwin) */
@@ -1955,6 +1956,7 @@ extern int bk_envlock_init(bk_s B);
 extern pid_t bk_pipe_to_process(bk_s B, int *fdinp, int*fdoutp, bk_flags flags);
 #define BK_PIPE_TO_PROCESS_FLAG_CLOSE_EXTRANEOUS_DESC	0x1
 #define BK_PIPE_FLAG_STDERR_ON_STDOUT		0x2 ///< When creating pipe to child, stderr dups on stdout
+#define BK_PIPE_FLAG_USE_PTY			0x4 ///< Use PTY instead of pipe
 extern int bk_exec(bk_s B, const char *proc, char *const *args, char *const *env, bk_flags flags);
 extern char *bk_search_path(bk_s B, const char *proc, const char *path, int mode, bk_flags flags);
 extern int bk_exec_cmd(bk_s B, const char *cmd, char *const *env, bk_flags flags);
