@@ -1,5 +1,5 @@
 #if !defined(lint) && !defined(__INSIGHT__)
-static const char libbk__rcsid[] = "$Id: b_exec.c,v 1.17 2003/12/29 19:53:40 seth Exp $";
+static const char libbk__rcsid[] = "$Id: b_exec.c,v 1.18 2003/12/30 05:27:21 seth Exp $";
 static const char libbk__copyright[] = "Copyright (c) 2003";
 static const char libbk__contact[] = "<projectbaka@baka.org>";
 #endif /* not lint */
@@ -23,7 +23,7 @@ static const char libbk__contact[] = "<projectbaka@baka.org>";
 
 #include <libbk.h>
 #include "libbk_internal.h"
-
+#include <pty.h>
 
 
 #ifdef BK_USING_PTHREADS
@@ -67,29 +67,43 @@ bk_pipe_to_process(bk_s B, int *fdinp, int *fdoutp, bk_flags flags)
   int fderr;
   pid_t pid = 0;
 
-  if (fdinp)
+  if (BK_FLAG_ISSET(flags, BK_PIPE_FLAG_USE_PTY))
   {
-    // We want child --> parent pipe.
-    if (pipe(c2p) < 0)
+    if (openpty(&p2c[1], &p2c[0], NULL, NULL, NULL) < 0)
     {
-      bk_error_printf(B, BK_ERR_ERR, "Could not create child --> parent pipe: %s\n", strerror(errno));
+      bk_error_printf(B, BK_ERR_ERR, "Could not create communication pty: %s\n", strerror(errno));
       goto error;
     }
-
-    bk_debug_printf_and(B,2,"Creating c2p pipe: [%d, %d]\n", c2p[0], c2p[1]);
+    c2p[0] = dup(p2c[1]);
+    c2p[1] = dup(p2c[0]);
   }
-
-  if (fdoutp)
+  else
   {
-    // We want parent --> child pipe.
-    if (pipe(p2c) < 0)
+    if (fdinp)
     {
-      bk_error_printf(B, BK_ERR_ERR, "Could not create parent --> child pipe: %s\n", strerror(errno));
-      goto error;
+      // We want child --> parent pipe.
+      if (pipe(c2p) < 0)
+      {
+	bk_error_printf(B, BK_ERR_ERR, "Could not create child --> parent pipe: %s\n", strerror(errno));
+	goto error;
+      }
+
+      bk_debug_printf_and(B,2,"Creating c2p pipe: [%d, %d]\n", c2p[0], c2p[1]);
     }
-    bk_debug_printf_and(B,2,"Creating p2c pipe: [%d, %d]\n", p2c[0], p2c[1]);
+
+    if (fdoutp)
+    {
+      // We want parent --> child pipe.
+      if (pipe(p2c) < 0)
+      {
+	bk_error_printf(B, BK_ERR_ERR, "Could not create parent --> child pipe: %s\n", strerror(errno));
+	goto error;
+      }
+      bk_debug_printf_and(B,2,"Creating p2c pipe: [%d, %d]\n", p2c[0], p2c[1]);
+    }
   }
 
+  bk_debug_printf_and(B, 1, "Prepare to fork in pid %d\n", getpid());
   switch (pid = fork())
   {
   case -1:
@@ -98,6 +112,7 @@ bk_pipe_to_process(bk_s B, int *fdinp, int *fdoutp, bk_flags flags)
     break;
 
   case 0:
+    bk_debug_printf_and(B, 1, "Created child pid %d\n", getpid());
     // Child
     fdin = fileno(stdin);
     fdout = fileno(stdout);
@@ -105,6 +120,40 @@ bk_pipe_to_process(bk_s B, int *fdinp, int *fdoutp, bk_flags flags)
 
     bk_debug_printf_and(B,4,"Child: stdin: %d, stdout: %d\n", fdin, fdout);
 
+    if (BK_FLAG_ISSET(flags, BK_PIPE_FLAG_USE_PTY))
+    {
+#ifdef TIOCNOTTY
+      int fd = -1;
+#endif /* TIOCNOTTY */
+
+#if defined(HAVE_SETPGID) && !defined(HAVE_SETSID)
+      if (setpgid(0, (pid = getpid())) == -1)
+      {
+	bk_error_printf(B, BK_ERR_ERR, "setpgid: %s\n", strerror(errno));
+	goto error;
+      }
+#else
+      // should always succeed in child process
+      setsid();
+#endif
+
+#ifdef TIOCNOTTY
+      /* bail on a controlling tty */
+      if ((fd = open("/dev/tty", O_RDWR)) >= 0)
+      {
+	if (ioctl(fd, TIOCNOTTY, (char *) 0) == -1)
+	{
+	  bk_error_printf(B, BK_ERR_ERR, "ioctl failed: %s\n", strerror(errno));
+	  goto error;
+	}
+	if (close(fd) == -1)
+	{
+	  bk_error_printf(B, BK_ERR_ERR, "ioctl close: %s\n", strerror(errno));
+	  goto error;
+	}
+      }
+#endif /* TIOCNOTTY */
+    }
 
     if (BK_FLAG_ISSET(flags, BK_PIPE_TO_PROCESS_FLAG_CLOSE_EXTRANEOUS_DESC))
     {
@@ -116,10 +165,12 @@ bk_pipe_to_process(bk_s B, int *fdinp, int *fdoutp, bk_flags flags)
 	if (cnt != fdin && cnt != fdout && cnt != fderr &&
 	    cnt != c2p[0] && cnt != c2p[1] &&
 	    cnt != p2c[0] && cnt != p2c[1])
+	{
 	  if (close(cnt) == 0)
 	  {
 	    bk_debug_printf_and(B,2,"Child: closing extraneous descriptor: %d\n", cnt);
 	  }
+	}
       }
     }
 
@@ -135,7 +186,8 @@ bk_pipe_to_process(bk_s B, int *fdinp, int *fdoutp, bk_flags flags)
 	bk_error_printf(B, BK_ERR_ERR, "dup failed: %s\n", strerror(errno));
 	goto error;
       }
-      close(p2c[0]);
+      if (p2c[0] != fdin)
+	close(p2c[0]);
 
       bk_debug_printf_and(B,2,"Child: closing p2c read (after dup to %d): %d\n", fdin, p2c[0]);
 
@@ -158,13 +210,16 @@ bk_pipe_to_process(bk_s B, int *fdinp, int *fdoutp, bk_flags flags)
 	bk_error_printf(B, BK_ERR_ERR, "dup failed: %s\n", strerror(errno));
 	goto error;
       }
-      close(c2p[1]);
+      if (c2p[1] != fdout && c2p[1] != fderr)
+	close(c2p[1]);
 
       bk_debug_printf_and(B,2,"Child: closing c2p write (after dup to %d): %d\n", fdout, c2p[1]);
     }
     break;
 
   default:
+    bk_debug_printf_and(B, 1, "Parent %d found child pid %d\n", getpid(), pid);
+
     // Parent
     if (fdinp)
     {
@@ -428,7 +483,8 @@ bk_pipe_to_exec(bk_s B, int *fdinp, int *fdoutp, const char *proc, char *const *
   }
 
   pid = bk_pipe_to_process(B, fdinp, fdoutp, ((BK_FLAG_ISSET(flags, BK_EXEC_FLAG_CLOSE_CHILD_DESC)?BK_PIPE_TO_PROCESS_FLAG_CLOSE_EXTRANEOUS_DESC:0) |
-					      (BK_FLAG_ISSET(flags, BK_EXEC_FLAG_STDERR_ON_STDOUT)?BK_PIPE_FLAG_STDERR_ON_STDOUT:0)));
+					      (BK_FLAG_ISSET(flags, BK_EXEC_FLAG_STDERR_ON_STDOUT)?BK_PIPE_FLAG_STDERR_ON_STDOUT:0) |
+					      (BK_FLAG_ISSET(flags, BK_EXEC_FLAG_USE_PTY)?BK_PIPE_FLAG_USE_PTY:0)));
 
   switch(pid)
   {
@@ -561,7 +617,9 @@ bk_pipe_to_cmd_tokenize(bk_s B, int *fdinp, int *fdoutp, const char *cmd, char *
       *fdoutp = -1;
   }
 
-  pid = bk_pipe_to_process(B, fdinp, fdoutp, BK_FLAG_ISSET(flags, BK_EXEC_FLAG_CLOSE_CHILD_DESC)?BK_PIPE_TO_PROCESS_FLAG_CLOSE_EXTRANEOUS_DESC:0);
+  pid = bk_pipe_to_process(B, fdinp, fdoutp, ((BK_FLAG_ISSET(flags, BK_EXEC_FLAG_CLOSE_CHILD_DESC)?BK_PIPE_TO_PROCESS_FLAG_CLOSE_EXTRANEOUS_DESC:0) |
+					      (BK_FLAG_ISSET(flags, BK_EXEC_FLAG_STDERR_ON_STDOUT)?BK_PIPE_FLAG_STDERR_ON_STDOUT:0) |
+					      (BK_FLAG_ISSET(flags, BK_EXEC_FLAG_USE_PTY)?BK_PIPE_FLAG_USE_PTY:0)));
 
   switch(pid)
   {
